--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ favicon: assets/favicon.ico                             # Icon displayed in the 
 
 # Header and footer text
 header_text: # Change Blog header text
-header_feature_image: assets/img/idea.jpeg
+header_feature_image: assets/img/idea-bg.jpg
 footer_text: 
 
 # Blog
