--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,10 +7,10 @@ dribbble:
 facebook:
 flickr:
 gitlab:
-github: "sylhare"
+github: "markeverard"
 instagram:
 keybase:
-linkedin:         # Full URL
+linkedin: "https://www.linkedin.com/in/everard"
 pinterest:
 reddit:
 soundcloud:
@@ -18,7 +18,7 @@ stack_overflow:
 stack_exchange:   # Full URL
 steam:
 tumblr:
-twitter:          # "twitter username"
+twitter: "ev2000" 
 vimeo:
 wordpress:
 youtube:          # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
@@ -35,6 +35,6 @@ share:
   pinterest:
   pocket:
   reddit: true
-  linkedin:
+  linkedin: true
   wordpress:
   email: true
