--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ avatar: assets/img/me.png                         # Empty for no avatar in navba
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: # Change Blog header text
+header_text: " "# Change Blog header text
 header_feature_image: assets/img/idea-bg.jpg
 footer_text: 
 
@@ -24,7 +24,7 @@ color_image: /assets/img/lineart.png                    # A bit transparent for 
 katex: true                                             # Enable if using math markup
 mermaid: true                                           # Enable mermaid-js for sequence and diagrams
 google_analytics:                                       # Tracking ID, e.g. "UA-000000-01"
-cookie_consent: false                                   # To respect the usage of cookies
+cookie_consent: true                                   # To respect the usage of cookies
 disqus_shortname: markeverard                                   
 
 # PAGINATION
