--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # SITE CONFIGURATION
 baseurl: "/"
-url: "https://markeverard.github.io"
+url: "https://www.markeverard.com"
 
 # THEME-SPECIFIC CONFIGURATION
 title: Mark Everard                                    # site's title
-description: "A website with blog posts and pages"      # used by search engines
+description: "Technology, Opinions and a side of Episerver"      # used by search engines
 avatar: assets/img/me.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
-header_text: # Change Blog header text
+header_text: "Technology, Opinions and a side of Episerver" # Change Blog header text
 header_feature_image: assets/img/idea-bg.jpg
 footer_text: 
 
