--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,19 +1,7 @@
-rohanchandra: # author-id
-  name: "Rohan Chandra"
-  avatar: "https://avatars2.githubusercontent.com/u/816965?s=460&v=4"
-  url: "https://github.com/rohanchandra"
-sylhare:
-  name: Sylhare
-  avatar: "https://avatars3.githubusercontent.com/u/20642750?s=460&v=4"
-  url: "https://github.com/sylhare"
-mmistakes:
-  name: "Michael Rose"
-  avatar: "https://avatars3.githubusercontent.com/u/1376749?s=460&v=4"
-  url: "https://github.com/mmistakes"
-mhagnumdw:
-  name: Mhagnumdw
-  avatar: "https://avatars2.githubusercontent.com/u/17688846?s=460&v=4"
-  url:
+markeverard: # author-id
+  name: "Mark Everard"
+  avatar: "https://avatars2.githubusercontent.com/u/1429224?s=400&v=4"
+  url: "https://uk.linkedin.com/in/everard"
 unknown:
   name: Unknown
   avatar:
