--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ color_image: /assets/img/lineart.png                    # A bit transparent for 
 # For layout customization, go to the "_sass > base" folder, and check "_variables.scss"
 katex: true                                             # Enable if using math markup
 mermaid: true                                           # Enable mermaid-js for sequence and diagrams
-google_analytics:                                       # Tracking ID, e.g. "UA-000000-01"
+google_analytics: "UA-15914266-1"                                     # Tracking ID, e.g. "UA-000000-01"
 cookie_consent: true                                   # To respect the usage of cookies
 disqus_shortname: markeverard                                   
 
