--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ social-facebook: # add your Facebook handle
 social-github: markeverard # add your Github handle
 social-linkedin: everard
 social-email: # add your Email address
+social-website: https://www.ftt.ai/
 
 # Disqus
 discus-identifier: markeverard # add your discus identifier
